--- a/what-are-cookies.html
+++ b/what-are-cookies.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="https://roamingdeveloper.codes/fevicon.png" type="image/png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="https://roamingdeveloper.codes/css/stylesheet.css"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style-blog.css">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://kit.fontawesome.com/425ce35459.js" crossorigin="anonymous"></script>
