new class h-red

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <a href="index.html"><span class="navbar-brand h1 logo" style="color: #D73F42;">Blogs [.] Roaming Developer [.] Codes</span></a>
+            <a href="index.html"><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.] Roaming Developer [.] Codes</span></a>
         </div>
     </nav>
 
@@ -31,8 +31,8 @@
         <div class="container">
             <div class="row flex-column-reverse flex-md-row">
                 <div class="col-md-6 text-vertical m-text-center">
-                    <h1 class="text-vertical">It's Our Blog</h1>
-                    <p class="h6">Find Tech Articles</p>
+                    <h1 class="text-vertical font-weight-bold h-red">It's Our Blog</h1>
+                    <p class="h6 font-weight-bold">Find Tech Articles</p>
                 </div>
                 <div class="col-md-6">
                     <img class="img-fluid p-3" src="./images/hero-head.jpg" alt="blog header image">
@@ -52,9 +52,10 @@
                     <img class="img-fluid p-3 blog-icon" src="./images/cookies.svg" alt="">
                 </div>
                 <div class="col-md-9 text-vertical">
-                    <h3 class="font-weight-bold">What are the Cookies</h3>
+                    <h3 class="font-weight-bold h-red">What are the Cookies</h3>
                     <p class="text-justify">
-                        Cookies are files that contain small pieces of data — like a username and password — that are exchanged between a user's computer and a web server to identify specific users and improve their browsing experience.
+                        A Cookie is a String of information that a website stores on a visitor's device(Desktop, Mobile etc.),
+                        and <span class="text-fade-lr">that the visitor's browser</span>
                     </p>
                     <p class="font-weight-bold"><i class="fa fa-user-tie"></i> @akashprasher<i class="ml-3 fa fa-calendar-week"></i> 01-June-2020</p>
                     <a href="what-are-cookies.html"><button class="btn btn-primary font-weight-bold">Read More <i class="fa fa-arrow-right"></i></button></a>
