--- a/index.html
+++ b/index.html
@@ -69,18 +69,21 @@
         <div class="container mt-5">
             <div class="row pt-3 pb-3">
                 <div class="col">
-                    <h5>Links</h5>
+                    <h6 class="font-weight-bold">Important Links</h6>
                     <hr>
-                    <p><a href="https://roamingdeveloper.codes/" target="_blank ">Projects</a></p>
+                    <p class="mb-0"><i class="fa fa-home mr-1"></i><a href="https://blogs.roamingdeveloper.codes/" target="_blank ">Home</a></p>
+                    <p class="mb-0"><i class="fa fa-cube mr-1"></i><a href="https://roamingdeveloper.codes/" target="_blank ">Projects</a></p>
                 </div>
                 <div class="col">
-                    <h5>Contact</h5>
+                    <h6 class="font-weight-bold">Contact</h6>
                     <hr>
-                    <p><a href="mailto:hello@roamingdeveloper.codes">hello@roamingdeveloper.codes</a></p>
+                    <p class="mb-0"><i class="fa fa-at mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Mail</a></p>
+                    <p class="mb-0"><i class="fa fa-github mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Github</a></p>
+                    <p class="mb-0"><i class="fa fa-linkedin mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Linkedin</a></p>
                 </div>
             </div>
             <div class="text-center pb-2">
-                <p class="h6">&copy; Roaming Developer</p>
+                <p class="h6 font-weight-bold">&copy; Roaming Developer</p>
             </div>
         </div>
     </footer>
