--- a/what-are-cookies.html
+++ b/what-are-cookies.html
@@ -32,7 +32,8 @@
         <div class="container mt-5">
             <div class="row flex-column-reverse flex-md-row">
                 <div class="col-md-6 text-vertical m-text-center">
-                    <h1 class="text-vertical font-weight-bold h-red">What are the Cookies?</h1>
+                    <h1 class="text-vertical font-weight-bold h-red h-one-rem">What are the Cookies?</h1>
+                    <p class="font-weight-bold m-text-center"><i class="fa fa-user-tie"></i> @akashprasher<i class="ml-3 fa fa-calendar-week"></i> 01-June-2020</p>
                 </div>
                 <div class="col-md-6 text-center">
                     <img class="img-fluid p-3 c-img-height" src="./images/cookies.svg" alt="blog header image">
@@ -50,13 +51,13 @@
                 <h3 class="font-weight-bold h-red">Here are some technical basics!</h3><hr>
             </div>
             <div class="container">
-                <h4 class="h-red">Okay <span class="font-weight-bold" id="userName" title="Your Name :)">Anonymous</span>! Here is the defination of Cookies.</h4>
+                <h4 class="">Okay <span class="font-weight-bold" id="userName" title="Your Name :)">Anonymous</span>! Here is the defination of Cookies.</h4>
                 <p>A Cookie is a String of information that a website stores on a visitor's device(Desktop, Mobile etc.),
                     and that the visitor's browser provides to website each time the visitor returns. 
                 </p>
             </div>
             <div class="container">
-                <h4 class="h-red">Why we use Cookies?</h4>
+                <h4 class="">Why we use Cookies?</h4>
                 <p>
                     We use cookies and other technologies to ensure everyone who uses website has the best possible
                     experience. Cookies are used to identify and track visitors, their usage of website, and their
@@ -64,7 +65,7 @@
                 </p>
             </div>
             <div class="container">
-                <h4 class="h-red">When are Cookies Created?</h4>
+                <h4 class="">When are Cookies Created?</h4>
                 <p>
                     Writing data to a cookie is usually done when a new webpage is loaded - for example after a 'submit' 
                     button is pressed the data handling page would be responsible for storing the values in a cookie. If 
@@ -87,18 +88,21 @@
             <div class="container mt-5">
                 <div class="row pt-3 pb-3">
                     <div class="col">
-                        <h5>Links</h5>
+                        <h6 class="font-weight-bold">Important Links</h6>
                         <hr>
-                        <p><a href="https://roamingdeveloper.codes/" target="_blank ">Projects</a></p>
+                        <p class="mb-0"><i class="fa fa-home mr-1"></i><a href="https://blogs.roamingdeveloper.codes/" target="_blank ">Home</a></p>
+                        <p class="mb-0"><i class="fa fa-cube mr-1"></i><a href="https://roamingdeveloper.codes/" target="_blank ">Projects</a></p>
                     </div>
                     <div class="col">
-                        <h5>Contact</h5>
+                        <h6 class="font-weight-bold">Contact</h6>
                         <hr>
-                        <p><a href="mailto:hello@roamingdeveloper.codes">hello@roamingdeveloper.codes</a></p>
+                        <p class="mb-0"><i class="fa fa-at mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Mail</a></p>
+                        <p class="mb-0"><i class="fa fa-github mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Github</a></p>
+                        <p class="mb-0"><i class="fa fa-linkedin mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Linkedin</a></p>
                     </div>
                 </div>
                 <div class="text-center pb-2">
-                    <p class="h6">&copy; Roaming Developer</p>
+                    <p class="h6 font-weight-bold">&copy; Roaming Developer</p>
                 </div>
             </div>
         </footer>
