--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     <h6 class="font-weight-bold">Contact</h6>
                     <hr>
                     <p class="mb-0"><i class="fa fa-at mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Mail</a></p>
-                    <p class="mb-0"><i class="fa fa-github mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Github</a></p>
-                    <p class="mb-0"><i class="fa fa-linkedin mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Linkedin</a></p>
+                    <p class="mb-0"><i class="fa fa-github mr-1"></i> <a href="https://github.com/akashprasher">Github</a></p>
+                    <p class="mb-0"><i class="fa fa-linkedin mr-1"></i> <a href="https://linkedin.com/in/akashprasher">Linkedin</a></p>
                 </div>
             </div>
             <div class="text-center pb-2">
