--- a/what-are-cookies.html
+++ b/what-are-cookies.html
@@ -84,7 +84,7 @@
             <div class="container">
                 <p>
                     Your name is <span class="font-weight-bold" id="userName_rep">Anonymous</span>. We actually don't know your Name
-                    at server side. This name is loacally saved in your own browser and now whenever you reload or visit this page you
+                    at server side. This name is locally saved in your own browser and now whenever you reload or visit this page you
                     don't need to enter your name again and again. Your browser automatically update the value of <strong>name</strong> previously entered
                     by you.<br>
                     Now Let's delete the value of <strong>name</strong> from browser. Just follow these instructions<br>
@@ -121,7 +121,7 @@
         <section>
             <div class="container mt-5 text-center">
                 <h4 class="font-weight-bold m-text-center blink">❤️</h4>
-                <h4 class="font-weight-bold m-text-center">Hope you like the article.</h4>
+                <h4 class="font-weight-bold m-text-center">Hope you liked the article.</h4>
             </div>
         </section>
     </main>
