adding mail feedback

--- a/what-are-cookies.html
+++ b/what-are-cookies.html
@@ -122,6 +122,7 @@
             <div class="container mt-5 text-center">
                 <h4 class="font-weight-bold m-text-center blink">❤️</h4>
                 <h4 class="font-weight-bold m-text-center">Hope you liked the article.</h4>
+                <h6 class="font-weight-bold m-text-center"><a class="h-red-ho" href="mailto:hello@roamingrdeveloper.codes">Write us at hello@roamingdeveloper.codes</a></h6>
             </div>
         </section>
     </main>
