adding this file for verification

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <a href="index.html"><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.] Roaming Developer [.] Codes</span></a>
+            <a href="https:blog."><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.] Roaming Developer [.] Codes</span></a>
         </div>
     </nav>
 
