--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <html lang="en">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-5JWVQQJ');
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -21,9 +39,14 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5JWVQQJ" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <a href="https:blog."><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.] Roaming Developer [.] Codes</span></a>
+            <a href="https:blog."><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.]
+                    Roaming Developer [.] Codes</span></a>
         </div>
     </nav>
 
@@ -40,7 +63,7 @@
             </div>
         </div>
     </section>
-    
+
     <div class="container text-center">
         <a href="#main"><i class="fa fa-angle-down"></i></a>
     </div>
@@ -54,11 +77,14 @@
                 <div class="col-md-9 text-vertical">
                     <h3 class="font-weight-bold h-red">What are the Cookies</h3>
                     <p class="text-justify">
-                        A Cookie is a String of information that a website stores on a visitor's device(Desktop, Mobile etc.),
+                        A Cookie is a String of information that a website stores on a visitor's device(Desktop, Mobile
+                        etc.),
                         and <span class="text-fade-lr">that the visitor's browser</span>
                     </p>
-                    <p class="font-weight-bold"><i class="fa fa-user-tie"></i> @akashprasher<i class="ml-3 fa fa-calendar-week"></i> 01-June-2020</p>
-                    <a href="what-are-cookies.html"><button class="btn btn-primary font-weight-bold">Read More <i class="fa fa-arrow-right"></i></button></a>
+                    <p class="font-weight-bold"><i class="fa fa-user-tie"></i> @akashprasher<i
+                            class="ml-3 fa fa-calendar-week"></i> 01-June-2020</p>
+                    <a href="what-are-cookies.html"><button class="btn btn-primary font-weight-bold">Read More <i
+                                class="fa fa-arrow-right"></i></button></a>
                 </div>
             </div>
         </div>
@@ -71,15 +97,20 @@
                 <div class="col">
                     <h6 class="font-weight-bold">Important Links</h6>
                     <hr>
-                    <p class="mb-0"><i class="fa fa-home mr-1"></i><a href="https://blogs.roamingdeveloper.codes/" target="_blank ">Home</a></p>
-                    <p class="mb-0"><i class="fa fa-cube mr-1"></i><a href="https://roamingdeveloper.codes/" target="_blank ">Projects</a></p>
+                    <p class="mb-0"><i class="fa fa-home mr-1"></i><a href="https://blogs.roamingdeveloper.codes/"
+                            target="_blank ">Home</a></p>
+                    <p class="mb-0"><i class="fa fa-cube mr-1"></i><a href="https://roamingdeveloper.codes/"
+                            target="_blank ">Projects</a></p>
                 </div>
                 <div class="col">
                     <h6 class="font-weight-bold">Contact</h6>
                     <hr>
-                    <p class="mb-0"><i class="fa fa-at mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Mail</a></p>
-                    <p class="mb-0"><i class="fa fa-github mr-1"></i> <a href="https://github.com/akashprasher">Github</a></p>
-                    <p class="mb-0"><i class="fa fa-linkedin mr-1"></i> <a href="https://linkedin.com/in/akashprasher">Linkedin</a></p>
+                    <p class="mb-0"><i class="fa fa-at mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Mail</a>
+                    </p>
+                    <p class="mb-0"><i class="fa fa-github mr-1"></i> <a
+                            href="https://github.com/akashprasher">Github</a></p>
+                    <p class="mb-0"><i class="fa fa-linkedin mr-1"></i> <a
+                            href="https://linkedin.com/in/akashprasher">Linkedin</a></p>
                 </div>
             </div>
             <div class="text-center pb-2">
