--- a/what-are-cookies.html
+++ b/what-are-cookies.html
@@ -2,6 +2,24 @@
 <html lang="en">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-5JWVQQJ');
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -21,9 +39,14 @@
 </head>
 
 <body onload="getUserName();">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5JWVQQJ" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <a href="index.html"><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.] Roaming Developer
+            <a href="index.html"><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.]
+                    Roaming Developer
                     [.] Codes</span></a>
         </div>
     </nav>
@@ -33,7 +56,8 @@
             <div class="row flex-column-reverse flex-md-row">
                 <div class="col-md-6 text-vertical m-text-center">
                     <h1 class="text-vertical font-weight-bold h-red h-one-rem">What are the Cookies?</h1>
-                    <p class="font-weight-bold m-text-center"><i class="fa fa-user-tie"></i> @akashprasher<i class="ml-3 fa fa-calendar-week"></i> 01-June-2020</p>
+                    <p class="font-weight-bold m-text-center"><i class="fa fa-user-tie"></i> @akashprasher<i
+                            class="ml-3 fa fa-calendar-week"></i> 01-June-2020</p>
                 </div>
                 <div class="col-md-6 text-center">
                     <img class="img-fluid p-3 c-img-height" src="./images/cookies.svg" alt="blog header image">
@@ -48,12 +72,15 @@
     <main id="main">
         <section class="mt-5">
             <div class="container">
-                <h3 class="font-weight-bold h-red">Here are some technical basics!</h3><hr>
+                <h3 class="font-weight-bold h-red">Here are some technical basics!</h3>
+                <hr>
             </div>
             <div class="container">
-                <h4 class="">Okay <span class="font-weight-bold" id="userName" title="Your Name :)">Anonymous</span>! Here is the defination of Cookies.</h4>
-                <p>A Cookie is a String of information that a website stores on a visitor's device(Desktop, Mobile etc.),
-                    and that the visitor's browser provides to website each time the visitor returns. 
+                <h4 class="">Okay <span class="font-weight-bold" id="userName" title="Your Name :)">Anonymous</span>!
+                    Here is the defination of Cookies.</h4>
+                <p>A Cookie is a String of information that a website stores on a visitor's device(Desktop, Mobile
+                    etc.),
+                    and that the visitor's browser provides to website each time the visitor returns.
                 </p>
             </div>
             <div class="container">
@@ -61,16 +88,18 @@
                 <p>
                     We use cookies and other technologies to ensure everyone who uses website has the best possible
                     experience. Cookies are used to identify and track visitors, their usage of website, and their
-                    website access preferences. 
+                    website access preferences.
                 </p>
             </div>
             <div class="container">
                 <h4 class="">When are Cookies Created?</h4>
                 <p>
-                    Writing data to a cookie is usually done when a new webpage is loaded - for example after a 'submit' 
-                    button is pressed the data handling page would be responsible for storing the values in a cookie. If 
-                    the user has elected to disable cookies then the write operation will fail, and subsequent sites which 
-                    rely on the cookie will either have to take a default action, or prompt the user to re-enter the information 
+                    Writing data to a cookie is usually done when a new webpage is loaded - for example after a 'submit'
+                    button is pressed the data handling page would be responsible for storing the values in a cookie. If
+                    the user has elected to disable cookies then the write operation will fail, and subsequent sites
+                    which
+                    rely on the cookie will either have to take a default action, or prompt the user to re-enter the
+                    information
                     that would have been stored in the cookie.
                 </p>
             </div>
@@ -78,14 +107,19 @@
 
         <section class="mt-5">
             <div class="container">
-                <h3 class="font-weight-bold h-red">Let's Understand by Example</h3><hr>
-                <h4 class=""><i class="fa fa-trash fa-sm mr-1"></i>Try to <span class="h-red">delete</span> Cookies.</h4>
+                <h3 class="font-weight-bold h-red">Let's Understand by Example</h3>
+                <hr>
+                <h4 class=""><i class="fa fa-trash fa-sm mr-1"></i>Try to <span class="h-red">delete</span> Cookies.
+                </h4>
             </div>
             <div class="container">
                 <p>
-                    Your name is <span class="font-weight-bold" id="userName_rep">Anonymous</span>. We actually don't know your Name
-                    at server side. This name is locally saved in your own browser and now whenever you reload or visit this page you
-                    don't need to enter your name again and again. Your browser automatically update the value of <strong>name</strong> previously entered
+                    Your name is <span class="font-weight-bold" id="userName_rep">Anonymous</span>. We actually don't
+                    know your Name
+                    at server side. This name is locally saved in your own browser and now whenever you reload or visit
+                    this page you
+                    don't need to enter your name again and again. Your browser automatically update the value of
+                    <strong>name</strong> previously entered
                     by you.<br>
                     Now Let's delete the value of <strong>name</strong> from browser. Just follow these instructions<br>
                     <ol>
@@ -98,7 +132,9 @@
                             <img class="img-fluid m-text-center" src="./images/fig-3.PNG" alt="">
                         </li>
                         <li>
-                            <p>Now <a class="h-red" href="./what-are-cookies.html"><i class="fa fa-redo-alt ml-1 mr-1"></i></a> reload the page. Now your name is reset to Anonymous and you need to Enter your <strong>name</strong> again.</p>
+                            <p>Now <a class="h-red" href="./what-are-cookies.html"><i
+                                        class="fa fa-redo-alt ml-1 mr-1"></i></a> reload the page. Now your name is
+                                reset to Anonymous and you need to Enter your <strong>name</strong> again.</p>
                         </li>
                     </ol>
                 </p>
@@ -110,7 +146,8 @@
                 <ol>
                     <li>
                         <p>Simply Click on the button and you'll get a pop-up and Just enter new <strong></strong></p>
-                        <a href="#" onclick="changeUserName();"><button class="btn btn-primary">Change Name <i class="far fa-edit ml-1"></i></button></a>
+                        <a href="#" onclick="changeUserName();"><button class="btn btn-primary">Change Name <i
+                                    class="far fa-edit ml-1"></i></button></a>
                     </li>
                     <li class="mt-3">
                         <p>Now Check! <strong>Name</strong> value is changed.</p>
@@ -122,7 +159,8 @@
             <div class="container mt-5 text-center">
                 <h4 class="font-weight-bold m-text-center blink">❤️</h4>
                 <h4 class="font-weight-bold m-text-center">Hope you liked the article.</h4>
-                <h6 class="font-weight-bold m-text-center"><a class="h-red-ho" href="mailto:hello@roamingrdeveloper.codes">Write us at hello@roamingdeveloper.codes</a></h6>
+                <h6 class="font-weight-bold m-text-center"><a class="h-red-ho"
+                        href="mailto:hello@roamingrdeveloper.codes">Write us at hello@roamingdeveloper.codes</a></h6>
             </div>
         </section>
     </main>
@@ -133,16 +171,21 @@
                 <div class="col">
                     <h6 class="font-weight-bold">Important Links</h6>
                     <hr>
-                    <p class="mb-0"><i class="fa fa-home mr-1"></i><a href="https://blogs.roamingdeveloper.codes/" target="_blank ">Home</a></p>
-                    <p class="mb-0"><i class="fa fa-cube mr-1"></i><a href="https://roamingdeveloper.codes/" target="_blank ">Projects</a></p>
+                    <p class="mb-0"><i class="fa fa-home mr-1"></i><a href="https://blogs.roamingdeveloper.codes/"
+                            target="_blank ">Home</a></p>
+                    <p class="mb-0"><i class="fa fa-cube mr-1"></i><a href="https://roamingdeveloper.codes/"
+                            target="_blank ">Projects</a></p>
                 </div>
                 <div class="col">
                     <h6 class="font-weight-bold">Contact</h6>
                     <hr>
-                    <p class="mb-0"><i class="fa fa-at mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Mail</a></p>
-                    <p class="mb-0"><i class="fa fa-github mr-1"></i> <a href="https://github.com/akashprasher">Github</a></p>
-                    <p class="mb-0"><i class="fa fa-linkedin mr-1"></i> <a href="https://linkedin.com/in/akashprasher">Linkedin</a></p>
-            </div>
+                    <p class="mb-0"><i class="fa fa-at mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Mail</a>
+                    </p>
+                    <p class="mb-0"><i class="fa fa-github mr-1"></i> <a
+                            href="https://github.com/akashprasher">Github</a></p>
+                    <p class="mb-0"><i class="fa fa-linkedin mr-1"></i> <a
+                            href="https://linkedin.com/in/akashprasher">Linkedin</a></p>
+                </div>
             </div>
             <div class="text-center pb-2">
                 <p class="h6 font-weight-bold">&copy; Roaming Developer</p>
@@ -152,31 +195,33 @@
 
     <script>
         function getUserName() {
-            if(localStorage.getItem("userName") === "Anonymous" || localStorage.getItem("userName") === null || localStorage.getItem("userName") === "null") {
+            if (localStorage.getItem("userName") === "Anonymous" || localStorage.getItem("userName") === null ||
+                localStorage.getItem("userName") === "null") {
                 swal("Tell us your name! (by default it's Anonymous)", {
-                content: "input",
-                })
-                .then((value) => {
-                    if(value === ""){
-                        localStorage.setItem("userName","Anonymous");
-                    } else {
-                        localStorage.setItem("userName",value);
-                        setName();
-                    }
-                });
+                        content: "input",
+                    })
+                    .then((value) => {
+                        if (value === "") {
+                            localStorage.setItem("userName", "Anonymous");
+                        } else {
+                            localStorage.setItem("userName", value);
+                            setName();
+                        }
+                    });
             } else {
                 setName();
             }
         }
+
         function changeUserName() {
             swal("Tell us your name!", {
-                content: "input",
+                    content: "input",
                 })
                 .then((value) => {
-                    if(value === ""){
-                        localStorage.setItem("userName","Anonymous");
+                    if (value === "") {
+                        localStorage.setItem("userName", "Anonymous");
                     } else {
-                        localStorage.setItem("userName",value);
+                        localStorage.setItem("userName", value);
                         setName();
                         window.location.href = "./what-are-cookies.html#main";
                     }
