updating index link

--- a/what-are-cookies.html
+++ b/what-are-cookies.html
@@ -45,7 +45,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <a href="index.html"><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.]
+            <a href="https:blog.roamingdeveloper.codes"><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.]
                     Roaming Developer
                     [.] Codes</span></a>
         </div>
@@ -171,7 +171,7 @@
                 <div class="col">
                     <h6 class="font-weight-bold">Important Links</h6>
                     <hr>
-                    <p class="mb-0"><i class="fa fa-home mr-1"></i><a href="https://blogs.roamingdeveloper.codes/"
+                    <p class="mb-0"><i class="fa fa-home mr-1"></i><a href="https://blog.roamingdeveloper.codes/"
                             target="_blank ">Home</a></p>
                     <p class="mb-0"><i class="fa fa-cube mr-1"></i><a href="https://roamingdeveloper.codes/"
                             target="_blank ">Projects</a></p>
