updating description from meta tag

--- a/what-are-cookies.html
+++ b/what-are-cookies.html
@@ -24,9 +24,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
-        content="Roaming Developer - We Develop Web applications based upon various technologies.Here We'll share tech Updates and news. It's our Blog">
+        content="Roaming Developer - What are Cookies. Here is the answer.">
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://roamingdeveloper.codes/" />
+    <link rel="canonical" href="https://roamingdeveloper.codes/what-are-cookies" />
     <meta name="theme-color" content="#D73F42">
     <link rel="shortcut icon" href="https://roamingdeveloper.codes/fevicon.png" type="image/png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
