updating description from meta tag

--- a/what-are-cookies.html
+++ b/what-are-cookies.html
@@ -26,7 +26,7 @@
     <meta name="description"
         content="Roaming Developer - What are Cookies. Here is the answer.">
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://roamingdeveloper.codes/what-are-cookies" />
+    <link rel="canonical" href="https://blog.roamingdeveloper.codes/what-are-cookies" />
     <meta name="theme-color" content="#D73F42">
     <link rel="shortcut icon" href="https://roamingdeveloper.codes/fevicon.png" type="image/png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
