--- a/what-are-cookies.html
+++ b/what-are-cookies.html
@@ -45,7 +45,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <a href="https:blog.roamingdeveloper.codes"><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.]
+            <a href="https://blog.roamingdeveloper.codes"><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.]
                     Roaming Developer
                     [.] Codes</span></a>
         </div>
