adding comment section Disqus

--- a/what-are-cookies.html
+++ b/what-are-cookies.html
@@ -23,8 +23,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description"
-        content="Roaming Developer - What are Cookies. Here is the answer.">
+    <meta name="description" content="Roaming Developer - What are Cookies. Here is the answer.">
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://blog.roamingdeveloper.codes/what-are-cookies" />
     <meta name="theme-color" content="#D73F42">
@@ -45,7 +44,8 @@
     <!-- End Google Tag Manager (noscript) -->
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <a href="https://blog.roamingdeveloper.codes"><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.]
+            <a href="https://blog.roamingdeveloper.codes"><span class="navbar-brand h1 logo font-weight-bold"
+                    style="color: #D73F42;">Blogs [.]
                     Roaming Developer
                     [.] Codes</span></a>
         </div>
@@ -156,11 +156,37 @@
             </div>
         </section>
         <section>
-            <div class="container mt-5 text-center">
+            <div class="container mt-5 mb-5 text-center">
                 <h4 class="font-weight-bold m-text-center blink">❤️</h4>
                 <h4 class="font-weight-bold m-text-center">Hope you liked the article.</h4>
                 <h6 class="font-weight-bold m-text-center"><a class="h-red-ho"
                         href="mailto:hello@roamingrdeveloper.codes">Write us at hello@roamingdeveloper.codes</a></h6>
+            </div>
+        </section>
+        <section class="mt-4">
+            <div class="container">
+                <div id="disqus_thread"></div>
+                <script>
+                    /**
+                     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+                    /*
+                    var disqus_config = function () {
+                    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                    };
+                    */
+                    (function () { // DON'T EDIT BELOW THIS LINE
+                        var d = document,
+                            s = d.createElement('script');
+                        s.src = 'https://blogroamingdeveloper.disqus.com/embed.js';
+                        s.setAttribute('data-timestamp', +new Date());
+                        (d.head || d.body).appendChild(s);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments
+                        powered
+                        by Disqus.</a></noscript>
             </div>
         </section>
     </main>
